# MarketMinds

./: README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: SignupModal.tsx  loginModal.tsx
marketminds/: .dockerignore  .gitignore  Dockerfile  README.md  analysis.md  docker-compose.yml  pyproject.toml  report.md  research.md
marketminds/knowledge_base/: investment_strategies.md
marketminds/src/marketminds/: auth.py  chain.py  crew.py  database.py  main.py  schemas.py  server.py  templates.py
marketminds/src/marketminds/config/: agents.yaml  tasks.yaml
marketminds/src/marketminds/scripts/: ingest.py
marketminds/src/marketminds/tools/: crypto_economic_tools.py  custom_tool.py  market_data_tools.py  rag_tools.py  stock_analysis_tools.py
marketminds/storage/: chroma.sqlite3
