[project]
name = "marketminds"
version = "0.1.0"
description = "MarketMinds AI Crew"
authors = [{ name = "Nutnell", email = "nutnell00@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "python-dotenv",
    "requests",
    "langchain",
    "langchain_community",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "passlib[bcrypt]",
    "python-jose",
    "argon2-cffi",
    "chromadb",
    "langchain-openai",
    "langchain_chroma",
    "langserve>=0.3.3",
    "sse_starlette",
    "yfinance",




]

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/marketminds"]

[project.scripts]
marketminds = "marketminds.main:run"
run_crew = "marketminds.main:run"
train = "marketminds.main:train"
replay = "marketminds.main:replay"
test = "marketminds.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
